[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[dependencies]
aes-gcm = "0.9.4"
rand = "0.8"
curv-kzen = { version = "0.9", default-features = false }
reqwest = { version = "0.9", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsecp256k1 = "0.3.2"