[package]
name = "gg18_sm_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_lib = {path = "../common_lib"}
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["macros"] }